--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="https://koyuisha.com/gentleman">
     <meta property="og:title" content="心結文學社-紳士">
     <meta property="og:description" content="心結文學社-紳士">
-    <meta property="og:image" content="./gentleman_logo.png">
+    <meta property="og:image" content="gentleman_logo.png">
     <link rel="shortcut icon" href="https://koyuisha.com/logo_icon.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="./main.css" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
@@ -20,7 +20,7 @@
 <body>
     <div class="container">
         <div class="comment">
-            <img class="logoimg" src="./gentleman_logo.png">
+            <img class="logoimg" src="gentleman_logo.png">
             <div class="paramerDiv">
                 <label style="color: rgb(219, 227, 235);"><span style="color: red;">*</span>不給完整網址，給名稱、作者、類別或是oo網oooo作品，作為紳士要有搜尋的能力
                     <br>e.g.  n網 123456 | p站 oooo | https冒號//0000點com/0000
